# omnistacks

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml
crates/data/: Cargo.toml
crates/data/migrations/2022-04-05-153243_create_node_messages/: down.sql  up.sql
crates/data/migrations/2022-04-08-191530_add_message_type/: down.sql  up.sql
crates/data/src/: custom_types.rs  db.rs  db_pool.rs  lib.rs  models.rs  schema.rs
crates/data/src/node_messages/: mod.rs  new_burn_block_message.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: burn_block.rs  main.rs
crates/node-listener/: Cargo.toml
crates/node-listener/src/: main.rs
